--- a/index.html
+++ b/index.html
@@ -55,8 +55,18 @@
             display: flex; align-items: center; background: rgba(255,255,255,0.08); 
             padding: 8px 15px; border-radius: 50px; border: 1px solid rgba(255,255,255,0.1); 
         }
-        .search-container input { background: transparent; border: none; outline: none; color: #fff; width: 100px; font-size: 12px; }
+        .search-container input { background: transparent; border: none; outline: none; color: #fff; width: 120px; font-size: 12px; }
         .search-container i { color: var(--lime); margin-right: 8px; }
+
+        /* Keresési találat kiemelése (VILLANÁS) */
+        @keyframes highlightFlash {
+            0% { border-color: var(--lime); box-shadow: 0 0 20px var(--lime-glow); }
+            100% { border-color: transparent; box-shadow: none; }
+        }
+        .search-match-highlight {
+            animation: highlightFlash 2s ease-out;
+            border: 1px solid var(--lime) !important;
+        }
 
         /* Hamburger */
         .menu-toggle { display: none; cursor: pointer; width: 30px; height: 22px; position: relative; z-index: 2100; }
@@ -400,23 +410,33 @@
         function handleSearchKey(event) {
             if (event.key === "Enter") {
                 const filter = document.getElementById('serviceSearch').value.toLowerCase();
-                if (filter === "") return;
+                if (!filter) return;
                 
+                // Megkeressük az összes szolgáltatást
                 const items = document.querySelectorAll('.service-item');
-                let firstMatch = null;
+                let foundMatch = null;
 
+                // Először megnézzük, mi felel meg a keresésnek
                 items.forEach(item => {
                     const h3Text = item.querySelector('h3').innerText.toLowerCase();
                     const pText = item.querySelector('p') ? item.querySelector('p').innerText.toLowerCase() : "";
+                    
                     if (h3Text.includes(filter) || pText.includes(filter)) {
-                        if (!firstMatch) firstMatch = item;
+                        item.style.display = "flex"; // Biztosítjuk, hogy látható legyen
+                        if (!foundMatch) foundMatch = item;
                     }
                 });
 
-                if (firstMatch) {
-                    const offset = 120; // Hely a fix fejlécnek
-                    const elementPosition = firstMatch.getBoundingClientRect().top;
-                    const offsetPosition = elementPosition + window.pageYOffset - offset;
+                // Ha van találat, oda görgetünk
+                if (foundMatch) {
+                    // Animáció/villanás hozzáadása a találathoz
+                    foundMatch.classList.remove('search-match-highlight');
+                    void foundMatch.offsetWidth; // Force reflow az animáció újraindításához
+                    foundMatch.classList.add('search-match-highlight');
+
+                    const headerOffset = 120;
+                    const elementPosition = foundMatch.getBoundingClientRect().top;
+                    const offsetPosition = elementPosition + window.pageYOffset - headerOffset;
 
                     window.scrollTo({
                         top: offsetPosition,
